--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.17",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
